--- a/src/App.css
+++ b/src/App.css
@@ -35,18 +35,44 @@
 
 .customer-item {
   margin: 20px;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.12);
+  width: 25%;
 }
 
 .animals-list {
+  display: flex;
+  justify-content: center;
 }
 
 .animal-item {
+  margin: 20px;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.12);
+  width: 25%;
 }
 
+.animal-item > ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+/* .animal-item ul > li > span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
 .book-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 150px;
 }
 
 .book-item {
+  margin: 20px;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.12);
+  width: 25%;
 }
 
 @keyframes App-logo-spin {
